webrtcbin: Data channel doesn't work when offer is created by remote peer
It seems that webrtcbin breaks when it receives a remote offer containing a data channel (right after receiving the first message in the channel), but the same doesn't happen when the data channel and the offer is is created by GStreamer.
Below are two minimal examples that can reproduce it:
-
Non-working version (receiving offer from browser): test1.py test1.html
-
Working version (sending offer from GStreamer): test2.py test2.html
Both scripts were tested in a debootstrap
environment (with Debian "bullseye" release) with the following packages:
- python3
- python3-gi
- libgstreamer1.0-0
- gir1.2-gst-plugins-bad-1.0
- gir1.2-gst-rtsp-server-1.0
- gstreamer1.0-plugins-good
- gstreamer1.0-plugins-bad
- gstreamer1.0-nice